fix: убирает overflow у body'

--- a/public/main.css
+++ b/public/main.css
@@ -377,7 +377,6 @@ body {
   line-height: 1.3;
   box-sizing: border-box;
   background-image: linear-gradient(90deg, #f2f2f2 0%, #ffffff 100%);
-  overflow: hidden;
 }
 
 a {
