--- a/src/scss/base.scss
+++ b/src/scss/base.scss
@@ -16,8 +16,6 @@ body {
 
   box-sizing: border-box;
   background-image: linear-gradient(90deg, #f2f2f2 0%, #ffffff 100%);
-
-  overflow: hidden;
 }
 
 a {
